2006-03-15  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bump to requiring fixesproto >= 4.0 and compositeproto >= 0.3.

2006-03-15  Matthieu Herrb <matthieu.herrb@laas.fr>

	* configure.ac
	* include/xorg-config.h.in
	- OpenBSD needs -Wl,-export-dynamic to export symbols from main
	executable to modules.
	- Probe for OpenBSD aperture driver and define HAS_APERTURE_DRV
	accordingly.

2006-03-15  Felix Kuehling  <fkuehlin@ati.com>

	* hw/xfree86/x86emu/ops2.c: (x86emuOp2_bts_R):
	Enable correct handling of the BTS instruction (opcode 0f ab)
	The code was there but #ifdefed out. Insead of BTS, BT was executed.
	This patch enables the BTS function and hooks it up the the correct
	opcode.
	(ATI Technologies Inc.)

2006-03-15  Felix Kuehling  <fxkuehl@gmx.de>

	* GL/mesa/shader/slang/Makefile.am:
	* GL/symlink-mesa.sh:
	Update to build against Mesa CVS HEAD.

2006-03-15  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaMoveInPixmap):
	Don't let pinned pixmaps get migrated in when using the "Always"
	migration scheme.  This notably keeps the visible screen from getting
	migrated in to a new location in framebuffer.

	Reported by:	Michel Dänzer.

2006-03-15  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/loader/loadmod.c:
	Coverity #1053: Nuke a dead variable.
	Coverity #269: Compare the requested ABI class against the ABI class
	    of the module, not the module class.
	Coverity #794: Fix a highly unlikely memory leak.

	* miext/cw/cw.c:
	Coverity #337: Remove useless NULL check.

	* hw/xfree86/loader/loader.c:
	Coverity #484: Fix an off-by-one in module refcounting.

	* damageext/damageext.c:
	Coverity #491: Check version number correctly.

	* xfixes/xfixes.c:
	Coverity #487: Check version number correctly.

	* hw/xfree86/common/xf86VidMode.c:
	Coverity #490: Fix a range check in xf86vidmode extension.

	* xfixes/region.c:
	Coverity #807: Fix a memory leak in XFixesExpandRegion.

	* hw/xfree86/xf4bpp/ppcPixFS.c: