@@ -507,6 +507,7 @@
 #define PCI_CHIP_ZX2_LBA		0x12EE
 #define PCI_CHIP_ZX2_SBA		0x4030
 #define PCI_CHIP_ZX2_IOC		0x4031
+#define PCI_CHIP_ZX2_PCIE		0x4037
 
 /* SGS */
 #define PCI_CHIP_STG2000		0x0008
